# 2025-ndsu-aiaa-autonomous-glider

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bno08x_wrapper.cpp  bno08x_wrapper.h  gps_wrapper.c  gps_wrapper.h  main.c  test.c
